## Process this file with automake to produce Makefile.in

pkgincludedir = $(includedir)/dvbpsi

noinst_LTLIBRARIES = lib_descriptors.la

lib_descriptors_la_SOURCES = dr_02.c \
                             dr_03.c \
                             dr_04.c \
                             dr_05.c \
                             dr_06.c \
                             dr_07.c \
                             dr_08.c \
                             dr_09.c \
                             dr_0a.c

pkginclude_HEADERS = dr_02.h \
                     dr_03.h \
                     dr_04.h \
                     dr_05.h \
                     dr_06.h \
                     dr_07.h \
                     dr_08.h \
                     dr_09.h \
                     dr_0a.h

