## Process this file with automake to produce Makefile.in

pkgincludedir = $(includedir)/dvbpsi

noinst_LTLIBRARIES = lib_descriptors.la

lib_descriptors_la_SOURCES = dr_02.c \
                             dr_03.c \
                             dr_04.c \
                             dr_05.c \
                             dr_06.c \
                             dr_07.c \
                             dr_08.c \
                             dr_09.c \
                             dr_0a.c \
                             dr_0b.c \
                             dr_0c.c \
                             dr_0d.c \
                             dr_0e.c \
                             dr_0f.c

pkginclude_HEADERS = dr_02.h \
                     dr_03.h \
                     dr_04.h \
                     dr_05.h \
                     dr_06.h \
                     dr_07.h \
                     dr_08.h \
                     dr_09.h \
                     dr_0a.h \
                     dr_0b.h \
                     dr_0c.h \
                     dr_0d.h \
                     dr_0e.h \
                     dr_0f.h \
                     dr.h

